<resources>
    <string name="app_name">ReviewMovie</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="create_account">No account yet? Create one.</string>
    <string name="hintLogin">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="your_name">Your Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="login_account">Already a member? Login.</string>
    <string name="verify">Verify</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="facebook_app_id" translatable="false">273072653619230</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb273072653619230</string>
    <string name="show_password">Show Password</string>
    <string name="cancel">Cancel</string>


    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notification">Notification</string>
    <string name="title_profile">Profile</string>
    <string name="click_back_to_exit">Please click Back again to Exit</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>

    <string name="title_notifications">Notifications</string>
    <string name="previous_page"><![CDATA[<< Previous]]></string>
    <string name="next_page"><![CDATA[Next >>]]></string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="title_category">Category</string>
    <string name="new_name">New name</string>
    <string name="exit">Exit</string>
    <string name="change">Change</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="more_comments">More comments</string>
    <string-array name="cinemas_array">
        <item>CGV</item>
        <item>NCC</item>
    </string-array>
    <string-array name="type_array">
        <item>Đơn</item>
        <item>Đôi</item>
        <item>Khác</item>
    </string-array>
</resources>
