<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/padding_10"
        android:src="@drawable/ic_edit_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
<TextView
    android:layout_gravity="center"
    android:gravity="center"
    android:id="@+id/txtOldName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000000"
    android:textStyle="bold"
    android:textSize="20sp"/>
    <EditText
        android:id="@+id/txtNewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:hint="@string/new_name"/>
   <LinearLayout
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <Button
           android:id="@+id/btnExitDialog"
           android:layout_marginRight="100dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
           android:textColor="#fff"
           android:text="@string/exit"
           android:background="@color/background_app"/>
       <Button
           android:id="@+id/btnChangeName"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="#fff"
           android:text="@string/change"
           android:background="@color/background_app"/>
   </LinearLayout>
</LinearLayout>